--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
     </head>
     <body>
         <h1 class="title">Picture Converter</h1>
+        <div class="contact">
+            <a href="https://github.com/oYuYo/pics-converter-wasm">
+                <img class="" src ="./images/github-mark.svg" alt="contact me"/>
+            </a>
+        </div>
         <hr />
         <p><budoux-ja>PNG画像をサイズ縮小し, JPG画像へ変換します. 画像の縦横比は維持します. <br />また当サイトではサーバにファイルを保存する, 収集するというような処理は行っていません</budoux-ja></p>
         <div class="select-action">
